--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <!-- Tab panes -->
                                     <div class="tab-content">
                                         <div class="tab-pane w3ls-connexionForm active" id="Login">
-                                            <form class="form-horizontal" action="#" method="get">
+                                            <form class="form-horizontal" action="#" method="get" id="loginForm">
                                                 <div class="form-group">
                                                     <label for="email" class="col-sm-2 control-label">
                                                         Tel</label>
@@ -114,9 +114,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                     </div>
                                                 </div>
 												<div id="succesConnexion" class="col-sm-10"></div>
-                                            </form>						
-                                        </div>
-										<div class="col-sm-10 w3ls-validConnexionForm">
+                                            </form>
+											<div class="col-sm-10 w3ls-validConnexionForm">
 												<form class="form-horizontal" id="sendCodeConxForm" action="#" method="get">
 													<div class="form-group">
 														<label for="sendCode" class="col-sm-2 control-label">
@@ -129,7 +128,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 														<button type="submit" class="submit btn btn-primary btn-sm"> Valider</button>
 													</div>
 												</form>
-												</div>
+										    </div>											
+                                        </div>
+										
                                         <div class="tab-pane w3ls-registrationForm" id="Registration">
                                             <form class="form-horizontal" action="#" method="get" id="formRegistration">
                                                 <div class="form-group">
